--- a/test/Views/DetailsWindow.xaml
+++ b/test/Views/DetailsWindow.xaml
@@ -6,24 +6,24 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:test.Views"
         mc:Ignorable="d"
-        Title="DetailsWindow" Height="800" Width="800">
+        Title="Details" Background="Bisque" WindowStartupLocation="CenterScreen"  Height="720" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200px"></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="40px"></RowDefinition>
-            <RowDefinition Height="40px"></RowDefinition>
+            <RowDefinition Height="30px"></RowDefinition>
+            <RowDefinition Height="30px"></RowDefinition>
             <RowDefinition Height="100px"></RowDefinition>
-            <RowDefinition Height="40px"></RowDefinition>
-            <RowDefinition Height="40px"></RowDefinition>
-            <RowDefinition Height="40px"></RowDefinition>
-            <RowDefinition Height="40px"></RowDefinition>
-            <RowDefinition Height="40px"></RowDefinition>
-            <RowDefinition Height="40px"></RowDefinition>
-            <RowDefinition Height="40px"></RowDefinition>
-            <RowDefinition Height="40px"></RowDefinition>
+            <RowDefinition Height="30px"></RowDefinition>
+            <RowDefinition Height="30px"></RowDefinition>
+            <RowDefinition Height="30px"></RowDefinition>
+            <RowDefinition Height="30px"></RowDefinition>
+            <RowDefinition Height="30px"></RowDefinition>
+            <RowDefinition Height="30px"></RowDefinition>
+            <RowDefinition Height="30px"></RowDefinition>
+            <RowDefinition Height="30px"></RowDefinition>
             <RowDefinition Height="200px"></RowDefinition>
             <RowDefinition Height="90px"></RowDefinition>
         </Grid.RowDefinitions>
@@ -32,11 +32,17 @@
                   VerticalAlignment="Top"
                   Width="750px"
                   Height="200px"
+                  Background="LightCyan"
                   SelectionMode="Single"
+                  HorizontalScrollBarVisibility="Disabled"
                   IsReadOnly="True"
                   AutoGenerateColumns="False" 
                   HorizontalGridLinesBrush="DarkGray"
-                  RowBackground="LightGray" 
+                  RowBackground="LightGray"
+                  ColumnHeaderHeight="25"
+                  RowHeight="25"
+                  ScrollViewer.CanContentScroll="False"
+                  VerticalScrollBarVisibility="Disabled"
                   AlternatingRowBackground="White"
                   Grid.Row="11" Grid.Column="0" Grid.ColumnSpan="2"
                   ItemsSource="{Binding ListQuotes}">
@@ -60,96 +66,143 @@
         </DataGrid>
         <TextBlock Grid.Row="0" 
                    Grid.Column="0" 
-                   Margin="5px">Id:</TextBlock>
-        <TextBox Grid.Row="0" 
-                 Grid.Column="1" 
+                   Margin="5px"
+                   HorizontalAlignment="Right">Id:</TextBlock>
+        <TextBox Grid.Row="0"
+                 Background="LightCyan"
+                 Grid.Column="1"
+                 HorizontalAlignment="Left"
+                 Width="500px"
                  Margin="5px" 
                  IsReadOnly="True" 
                  Text="{Binding Path = SelectedCrypto.Asset_Id}"></TextBox>
         <TextBlock Grid.Row="1" 
-                   Grid.Column="0" 
+                   Grid.Column="0"
+                   Width="500px"
+                   HorizontalAlignment="Right"
                    Margin="5px">Name:</TextBlock>
-        <TextBox Grid.Row="1" 
+        <TextBox Grid.Row="1"
+                 Background="LightCyan"
                  Grid.Column="1" 
-                 Margin="5px" 
+                 Margin="5px"
+                 HorizontalAlignment="Left"
+                 Width="500px"
                  IsReadOnly="True" 
                  Text="{Binding Path = SelectedCrypto.Name}"></TextBox>
         <TextBlock Grid.Row="2" 
-                   Grid.Column="0" 
+                   Grid.Column="0"
+                   HorizontalAlignment="Right"
                    Margin="5px">Description:</TextBlock>
-        <TextBox Height="100px" 
+        <TextBox Height="100px"
+                 Background="LightCyan"
                  TextWrapping="Wrap" 
-                 Grid.Row="2" 
+                 Grid.Row="2"
+                 HorizontalAlignment="Left"
                  Grid.Column="1" 
-                 Margin="5px" 
-                 IsReadOnly="True" 
+                 Margin="5px"
+                 Width="500px"
+                 IsReadOnly="True"
+                 VerticalScrollBarVisibility="Hidden"
                  Text="{Binding Path = SelectedCrypto.Description}"></TextBox>
         <TextBlock Grid.Row="3" 
-                   Grid.Column="0" 
+                   Grid.Column="0"
+                   HorizontalAlignment="Right"
                    Margin="5px">Price:</TextBlock>
-        <TextBox Grid.Row="3" 
-                 Grid.Column="1" 
-                 Margin="5px" 
+        <TextBox Grid.Row="3"
+                 Background="LightCyan"
+                 Grid.Column="1"
+                 HorizontalAlignment="Left"
+                 Margin="5px"
+                 Width="500px"
                  IsReadOnly="True" 
                  Text="{Binding Path = SelectedCrypto.Price}"></TextBox>
         <TextBlock Grid.Row="4" 
-                   Grid.Column="0" 
+                   Grid.Column="0"
+                   HorizontalAlignment="Right"
                    Margin="5px">Volume by 24 hours:</TextBlock>
-        <TextBox Grid.Row="4" 
-                 Grid.Column="1" 
+        <TextBox Grid.Row="4"
+                 Background="LightCyan"
+                 Grid.Column="1"
+                 HorizontalAlignment="Left"
+                 Width="500px"
                  Margin="5px" 
                  IsReadOnly="True" 
                  Text="{Binding Path = SelectedCrypto.Volume_24h}"></TextBox>
         <TextBlock Grid.Row="5" 
-                   Grid.Column="0" 
+                   Grid.Column="0"
+                   HorizontalAlignment="Right"
                    Margin="5px">Changing by 1 hours:</TextBlock>
-        <TextBox Grid.Row="5" 
-                 Grid.Column="1" 
-                 Margin="5px" 
+        <TextBox Grid.Row="5"
+                 Background="LightCyan"
+                 Grid.Column="1"
+                 HorizontalAlignment="Left"
+                 Margin="5px"
+                 Width="500px"
                  IsReadOnly="True" 
                  Text="{Binding Path = SelectedCrypto.Change_1h}"></TextBox>
         <TextBlock Grid.Row="6" 
-                   Grid.Column="0" 
+                   Grid.Column="0"
+                   HorizontalAlignment="Right"
                    Margin="5px">Changing by 24 hours:</TextBlock>
-        <TextBox Grid.Row="6" 
-                 Grid.Column="1" 
-                 Margin="5px" 
+        <TextBox Grid.Row="6"
+                 Background="LightCyan"
+                 Grid.Column="1"
+                 HorizontalAlignment="Left"
+                 Margin="5px"
+                 Width="500px"
                  IsReadOnly="True" 
                  Text="{Binding Path = SelectedCrypto.Change_24h}"></TextBox>
         <TextBlock Grid.Row="7" 
-                   Grid.Column="0" 
+                   Grid.Column="0"
+                   HorizontalAlignment="Right"
                    Margin="5px">Changing by 7 days:</TextBlock>
-        <TextBox Grid.Row="7" 
-                 Grid.Column="1" 
+        <TextBox Grid.Row="7"
+                 Background="LightCyan"
+                 Grid.Column="1"
+                 HorizontalAlignment="Left"
+                 Width="500px"
                  Margin="5px" 
                  IsReadOnly="True" 
                  Text="{Binding Path = SelectedCrypto.Change_7d}"></TextBox>
         <TextBlock Grid.Row="8" 
                    Grid.Column="0"
+                   HorizontalAlignment="Right"
                    Margin="5px">Total supply:</TextBlock>
-        <TextBox Grid.Row="8" 
-                 Grid.Column="1" 
+        <TextBox Grid.Row="8"
+                 Background="LightCyan"
+                 Grid.Column="1"
+                 HorizontalAlignment="Left"
+                 Width="500px"
                  Margin="5px" 
                  IsReadOnly="True" 
                  Text="{Binding Path = SelectedCrypto.Total_supply}"></TextBox>
         <TextBlock Grid.Row="9" 
-                   Grid.Column="0" 
+                   Grid.Column="0"
+                   HorizontalAlignment="Right"
                    Margin="5px">Circulating supply:</TextBlock>
-        <TextBox Grid.Row="9" 
-                 Grid.Column="1" 
+        <TextBox Grid.Row="9"
+                 Background="LightCyan"
+                 Grid.Column="1"
+                 HorizontalAlignment="Left"
+                 Width="500px"
                  Margin="5px" 
                  IsReadOnly="True" 
                  Text="{Binding Path = SelectedCrypto.Circulating_supply}"></TextBox>
         <TextBlock Grid.Row="10" 
-                   Grid.Column="0" 
+                   Grid.Column="0"
+                   HorizontalAlignment="Right"
                    Margin="5px">Max supply:</TextBlock>
-        <TextBox Grid.Row="10" 
-                 Grid.Column="1" 
-                 Margin="5px" 
+        <TextBox Grid.Row="10"
+                 Background="LightCyan"
+                 Grid.Column="1"
+                 HorizontalAlignment="Left"
+                 Margin="5px"
+                 Width="500px"
                  IsReadOnly="True" 
                  Text="{Binding Path = SelectedCrypto.Max_supply}"></TextBox>
         <Button Command="{Binding ExitCommand}" 
-                Grid.Column="0" 
+                Grid.Column="0"
+                Background="LightCyan"
                 Grid.Row="13" 
                 Grid.ColumnSpan="2" 
                 VerticalAlignment="Center" 
