--- a/test/Views/MainWindow.xaml
+++ b/test/Views/MainWindow.xaml
@@ -5,51 +5,58 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:test"
         mc:Ignorable="d"
-        Title="MainWindow" Height="470" Width="800">
+        Title="Main" Background="Bisque" WindowStartupLocation="CenterScreen"  Height="550" Width="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="100px"></RowDefinition>
-            <RowDefinition Height="300px"></RowDefinition>
+            <RowDefinition Height="350px"></RowDefinition>
+            <RowDefinition Height="100px"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <TextBox Width="200px"
-                     Name="srchTb"
-                     Text="{Binding SrchWrd}"
-                     HorizontalAlignment="Right"
-                     Height="30px" 
-                     Grid.Row="0"
-                     Grid.Column="0"
-                     Margin="10px 10px 10px 10px"></TextBox>
-        <Button x:Name="btnSrch" 
-                    Command="{Binding SearchCommand}"
-                    CommandParameter="{Binding srchTb}"
+        <StackPanel Grid.Column="0"
+                    Grid.ColumnSpan="2"
                     Grid.Row="0"
-                    Grid.Column="1"
-                    HorizontalAlignment="Left"
-                    Width="200px" Height="30px" 
-                    Margin="10px 10px 10px 10px">Search</Button>
+                    HorizontalAlignment="Center"
+                    Orientation="Horizontal">
+            <TextBlock FontSize="20px" Text="Search: " VerticalAlignment="Center"></TextBlock>
+            <TextBox Width="400px"
+                     Name="srchTb"
+                     Text="{Binding TextSearch, UpdateSourceTrigger=PropertyChanged}"
+                     HorizontalAlignment="Center"
+                     Height="30px"
+                     VerticalAlignment="Center"
+                     FontSize="20px"
+                     Background="LightCyan"
+                     Margin="10px 10px 10px 10px"></TextBox>
+        </StackPanel>
         <DataGrid SelectedItem="{Binding SelectedCrypto}" 
                   x:Name="dataGrid" 
                   HorizontalAlignment="Center"
-                  VerticalAlignment="Top"
+                  VerticalAlignment="Center"
                   Width="750px"
                   Height="330px"
+                  Background="LightCyan"
                   SelectionMode="Single"
                   IsReadOnly="True"
-                  AutoGenerateColumns="True"
+                  AutoGenerateColumns="False"
+                  ColumnHeaderHeight="30"
                   HorizontalGridLinesBrush="DarkGray"
-                  RowBackground="LightGray" 
+                  ScrollViewer.CanContentScroll="False"
+                  RowHeight="30"
+                  RowBackground="LightGray"
+                  VerticalScrollBarVisibility="Disabled"
+                  HorizontalScrollBarVisibility="Disabled"
                   AlternatingRowBackground="White"
                   Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
-                  ItemsSource="{Binding dataGrid, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}">
+                  ItemsSource="{Binding View}">
             <DataGrid.InputBindings>
                 <MouseBinding
                     MouseAction="LeftDoubleClick"
-                    Command="{Binding DetailsCommand}"
-                    CommandParameter="{Binding SelectedCrypto/}"/>
+                    Command="{Binding Path = DetailsCommand}"
+                    CommandParameter="{Binding Path = SelectedCrypto}"/>
             </DataGrid.InputBindings>
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Code" 
@@ -58,10 +65,11 @@
                 <DataGridTextColumn Header="Name" 
                                     Binding="{Binding Path=Name}" 
                                     Width="250" />
-                <DataGridTextColumn Header="Price" 
+                <DataGridTextColumn Header="Price(in $)" 
                                     Binding="{Binding Path=Price}" 
                                     Width="250" />
             </DataGrid.Columns>
         </DataGrid>
+        <Label HorizontalAlignment="Center" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2">*For watching details about crypto: double left mouse click on choosen crypto in table </Label>
     </Grid>
 </Window> 
